crates/core/tests/ui/to_xml/union_not_supported.stderr
error: unions are not supported
 --> tests/ui/to_xml/union_not_supported.rs:2:1
  |
2 | union Foo {
  | ^^^^^
